# paddleocr-ernie-pyfi

./: .env.example  .gitignore  AGENT.md  README.md  pyproject.toml
docs/: architecture.md  two_round_results_summary.md
scripts/: generate_chinese_reports.py
src/paddle_pyfi/: __init__.py  architecture.py  cli.py  config.py  dataset.py  domains.py  ernie_client.py  file_types.py  manifest_runner.py  ocr_presets.py  paddleocr_client.py  paths.py  pipeline.py  prompts.py  question_router.py  reporting.py  response_parser.py  scoring.py
src/paddle_pyfi/domains_data/: __init__.py  contract.yaml  finance.yaml  invoice.yaml  research_paper.yaml
tests/: test_dataset_manifest.py  test_domain_adapter.py  test_ernie_client.py  test_file_type.py  test_ocr_presets.py  test_paths.py  test_payload.py  test_pipeline.py  test_prompts.py  test_question_router.py  test_reporting.py  test_response_parser.py  test_scoring.py
